...
                    android:layout_height="214dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_noimage_big"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/market_used_buy_detail_title_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/black"
...
                    app:layout_constraintBottom_toTopOf="@id/market_used_buy_comment_edit_button_title_content_border"
                    app:layout_constraintStart_toEndOf="@+id/market_used_buy_comment_button"
                    app:layout_constraintTop_toBottomOf="@+id/market_used_buy_detail_money_textview"
                    app:layout_constraintVertical_bias="1.0" />

                <Button
                    android:id="@+id/market_used_buy_delete_button"
                    android:layout_width="51.4dp"
                    android:layout_height="28.7dp"
                    android:layout_marginStart="9.6dp"
                    android:layout_marginTop="17dp"
                    android:layout_marginBottom="14.8dp"
                    android:background="@drawable/button_rect_normal"
...
